--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  
   "scripts": {
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.1"
   }
