--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.1"
+  },
+  "devDependencies": {
+    "@creativebulma/bulma-divider": "^1.1.0"
   }
 }
