added readme file

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DB_NAME='blog_db'
-DB_USER='ashwinilh'
-DB_PASSWORD='mysqlpass'
+DB_NAME='exocytzuowzi5rcd'
+DB_USER='pfla7fmwabuq3kv6'
+DB_PASSWORD='kgfe4bg00alpofv4'
+JAWSDB_URL='mysql://pfla7fmwabuq3kv6:kgfe4bg00alpofv4@r98du2bxwqkq3shg.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/exocytzuowzi5rcd'
